--- a/app/src/main/res/layout/activity_userregister1.xml
+++ b/app/src/main/res/layout/activity_userregister1.xml
@@ -8,66 +8,135 @@
 
     <EditText
         android:id="@+id/REmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="215dp"
+        android:layout_height="40dp"
+        android:background="@drawable/wrap_blackborder"
         android:ems="10"
-        android:hint="ID (E-MAIL)"
+        android:hint="@string/IDEmail"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="76dp" />
+        android:layout_marginLeft="28dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
     <EditText
         android:id="@+id/RPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="215dp"
+        android:layout_height="40dp"
+        android:background="@drawable/wrap_blackborder"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/PasswordSix"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="147dp" />
+        android:layout_marginTop="39dp"
+        app:layout_constraintTop_toBottomOf="@+id/REmail"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.13" />
 
     <EditText
         android:id="@+id/RConfirmPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="215dp"
+        android:layout_height="40dp"
+        android:background="@drawable/wrap_blackborder"
         android:ems="10"
-        android:hint="Password Confirm"
+        android:hint="@string/PasswordConfirm"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="217dp" />
+        android:layout_marginTop="41dp"
+        app:layout_constraintTop_toBottomOf="@+id/RPassword"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.13" />
 
     <EditText
         android:id="@+id/RNickName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="215dp"
+        android:layout_height="40dp"
+        android:background="@drawable/wrap_blackborder"
         android:ems="10"
-        android:hint="NickName"
+        android:hint="@string/Nickname"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="294dp" />
+        android:layout_marginTop="45dp"
+        app:layout_constraintTop_toBottomOf="@+id/RConfirmPassword"
+        android:layout_marginLeft="28dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/IDConfirm"
-        android:layout_width="83dp"
-        android:layout_height="41dp"
-        android:text="ID TEST"
-        tools:layout_editor_absoluteX="285dp"
-        tools:layout_editor_absoluteY="76dp" />
+        android:layout_width="70dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/wrap_blackborder"
+        android:text="@string/DuplicationTest"
+        android:textColor="@android:color/black"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/REmail"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
     <Button
         android:id="@+id/NickTestButton"
-        android:layout_width="81dp"
-        android:layout_height="44dp"
-        android:text="NTEST"
-        tools:layout_editor_absoluteX="283dp"
-        tools:layout_editor_absoluteY="294dp" />
+        android:layout_width="70dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/wrap_blackborder"
+        android:text="@string/DuplicationTest"
+        android:textColor="@android:color/black"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/RNickName"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RConfirmPassword" />
 
     <Button
         android:id="@+id/NextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NEXT"
-        tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="399dp" />
+        android:background="@drawable/wrap_blackborder"
+        android:text="@string/Next"
+        android:textColor="@android:color/black"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/RNickName"
+        app:layout_constraintVertical_bias="0.319" />
+
+    <TextView
+        android:id="@+id/textView51"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/UserRegister"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="36sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView19" />
+
+    <ImageView
+        android:id="@+id/imageView19"
+        android:layout_width="270dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/progressstickone" />
 
 </android.support.constraint.ConstraintLayout>
