--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -145,38 +145,36 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_food"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="140dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:clickable="true"
         android:visibility="invisible"
         app:backgroundTint="@android:color/holo_blue_light"
         app:fabSize="mini"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.974"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@mipmap/dish" />
+        app:srcCompat="@mipmap/dish"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="90dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_exer"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="50dp"
         android:clickable="true"
         android:visibility="invisible"
         app:backgroundTint="@android:color/holo_green_light"
         app:fabSize="mini"
-        app:layout_constraintBottom_toBottomOf="@+id/fab_food"
-        app:layout_constraintHorizontal_bias="0.974"
+        app:layout_constraintHorizontal_bias="0.705"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView49"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
         app:srcCompat="@mipmap/weightlifting1" />
 
 
