--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,85 +15,45 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         app:srcCompat="@mipmap/pig"
-        app:layout_constraintTop_toTopOf="@+id/progressBar"
-        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
-        app:layout_constraintLeft_toLeftOf="@+id/progressBar"
-        app:layout_constraintRight_toRightOf="@+id/progressBar"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="0dp"
-        android:layout_height="250dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginStart="66dp"
-        android:max="100"
-        android:progress="56"
-        android:progressBackgroundTint="@android:color/holo_orange_light"
-        android:progressTint="@android:color/holo_red_light"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/dynamicArcView"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="66dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="66dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.432"
-        app:layout_constraintHorizontal_bias="0.677"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/dynamicArcView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/dynamicArcView"
+        app:layout_constraintBottom_toBottomOf="@+id/dynamicArcView"
+        android:layout_marginBottom="8dp" />
 
     <ImageView
         android:id="@+id/imageView17"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="146dp"
+        android:layout_height="155dp"
         android:layout_marginEnd="3dp"
         app:srcCompat="@mipmap/thinkballoon"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="3dp" />
+        android:layout_marginTop="-3dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.965" />
 
     <ImageView
         android:id="@+id/imageView18"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="45dp"
         android:layout_marginStart="48dp"
         app:srcCompat="@mipmap/burger"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="41dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="37dp"
+        app:layout_constraintTop_toTopOf="@+id/imageView17"
+        android:layout_marginTop="29dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/imageView17"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="45dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView17"
+        app:layout_constraintHorizontal_bias="0.662" />
 
-    <TextView
-        android:id="@+id/textView47"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/KcalPercent"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+
 
     <TextView
         android:id="@+id/textView48"
@@ -103,13 +63,12 @@
         android:textColor="@android:color/holo_red_light"
         android:textStyle="bold"
         android:layout_marginStart="7dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/textView49"
-        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintRight_toLeftOf="@+id/dynamicArcView"
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="3dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView49"
-        android:layout_marginLeft="7dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="250dp" />
 
     <TextView
         android:id="@+id/textView49"
@@ -119,13 +78,13 @@
         android:textColor="@android:color/holo_orange_light"
         android:textStyle="bold"
         android:layout_marginEnd="16dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+        app:layout_constraintLeft_toRightOf="@+id/dynamicArcView"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="3dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/progressBar"
-        android:layout_marginRight="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="250dp"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <TextView
         android:id="@+id/textView50"
@@ -136,46 +95,80 @@
         android:textColor="?attr/colorPrimary"
         android:textStyle="bold"
         android:layout_marginEnd="19dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/imageView3"
-        android:layout_marginTop="7dp"
+        app:layout_constraintBottom_toBottomOf="@+id/dynamicArcView"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/dynamicArcView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/dynamicArcView"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        android:layout_marginRight="19dp" />
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintVertical_bias="0.0" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_food"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:clickable="true"
         android:visibility="invisible"
         app:backgroundTint="@android:color/holo_blue_light"
         app:fabSize="mini"
-        app:layout_constraintHorizontal_bias="0.974"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@mipmap/dish"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="90dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/dynamicArcView"
+        android:layout_marginRight="33dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_exer"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="50dp"
         android:clickable="true"
         android:visibility="invisible"
         app:backgroundTint="@android:color/holo_green_light"
         app:fabSize="mini"
-        app:layout_constraintHorizontal_bias="0.705"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@mipmap/weightlifting1"
+        android:layout_marginStart="8dp"
+        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar"
-        app:srcCompat="@mipmap/weightlifting1" />
+        android:layout_marginLeft="30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.721"
+        android:layout_marginTop="31dp"
+        app:layout_constraintTop_toBottomOf="@+id/textPercentage" />
+
+    <TextView
+        android:id="@+id/textPercentage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/KcalPercent"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/dynamicArcView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <com.hookedonplay.decoviewlib.DecoView xmlns:custom="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/dynamicArcView"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="146dp"
+        custom:dv_lineWidth="26dp"
+        custom:layout_constraintLeft_toLeftOf="parent"
+        custom:layout_constraintRight_toRightOf="parent"
+        custom:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
