--- a/app/src/main/res/layout/activity_myfood_add.xml
+++ b/app/src/main/res/layout/activity_myfood_add.xml
@@ -10,6 +10,7 @@
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_marginRight="0dp"
+        android:layout_marginEnd="0dp"
         android:background="@android:drawable/ic_menu_search"
         app:layout_constraintRight_toLeftOf="@+id/button_myfoodadd_camera"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
@@ -19,6 +20,7 @@
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_marginRight="0dp"
+        android:layout_marginEnd="0dp"
         android:background="@android:drawable/ic_menu_camera"
         app:layout_constraintRight_toLeftOf="@+id/button_myfoodadd_makemy"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
@@ -28,6 +30,7 @@
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@android:drawable/ic_menu_edit"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
@@ -49,7 +52,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="163dp"
         android:text="@string/Cancel"
         android:textColor="@android:color/white"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView55"
@@ -72,7 +75,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="0dp" />
 
     <ImageView
         android:id="@+id/imageView22"
