--- a/app/src/main/res/layout/activity_myexercise_add.xml
+++ b/app/src/main/res/layout/activity_myexercise_add.xml
@@ -6,34 +6,24 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button_myfoodadd_search"
+        android:id="@+id/button_myexerciseadd_search"
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
         android:background="@android:drawable/ic_menu_search"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText5"
-        app:layout_constraintRight_toLeftOf="@+id/button_myfoodadd_camera" />
+        app:layout_constraintRight_toLeftOf="@+id/button_myexerciseadd_makemy"
+        android:layout_marginRight="7dp" />
 
     <Button
-        android:id="@+id/button_myfoodadd_camera"
+        android:id="@+id/button_myexerciseadd_makemy"
         android:layout_width="30dp"
         android:layout_height="40dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="@android:drawable/ic_menu_camera"
-        app:layout_constraintRight_toLeftOf="@+id/button_myfoodadd_makemy"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
-
-    <Button
-        android:id="@+id/button_myfoodadd_makemy"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@android:drawable/ic_menu_edit"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText5"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar5"
@@ -48,35 +38,35 @@
         app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
-        android:id="@+id/button_myfoodadd_cancel"
+        android:id="@+id/button_myexerciseadd_cancel"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="163dp"
+        android:layout_marginStart="8dp"
         android:text="@string/Cancel"
         android:textColor="@android:color/white"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView55"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView55"
         android:layout_width="153dp"
         android:layout_height="52dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:gravity="center"
-        android:text="@string/MyFoodAdd"
+        android:text="@string/MyExerciseAdd"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="0dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView22"
@@ -86,11 +76,12 @@
         android:background="?attr/colorPrimary"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar5" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar5"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <EditText
         android:id="@+id/editText5"
-        android:layout_width="257dp"
+        android:layout_width="280dp"
         android:layout_height="34dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -103,11 +94,8 @@
         android:paddingLeft="10dp"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="@+id/imageView22"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView22"
         app:layout_constraintTop_toBottomOf="@+id/textView55"
-        app:layout_constraintRight_toLeftOf="@+id/button_myexerciseadd_search"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintVertical_bias="0.0" />
 
     <ListView
