--- a/app/src/main/res/layout/activity_fab_exercise_calendar.xml
+++ b/app/src/main/res/layout/activity_fab_exercise_calendar.xml
@@ -66,13 +66,16 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
-        android:background="?attr/colorPrimary"
+        android:background="@android:color/white"
         android:focusedMonthDateColor="#ffffff"
         android:unfocusedMonthDateColor="#ffffff"
+        android:weekNumberColor="?attr/colorPrimary"
+        android:weekSeparatorLineColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView47" />
+        app:layout_constraintTop_toBottomOf="@+id/textView47"
+        />
 
 </android.support.constraint.ConstraintLayout>
