--- a/app/src/main/res/layout/activity_userregister2.xml
+++ b/app/src/main/res/layout/activity_userregister2.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.kennethelee.nammuk.MainActivity">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/CompleteButton"
@@ -24,7 +23,7 @@
         app:layout_constraintTop_toBottomOf="@+id/RWeight" />
 
     <RadioGroup
-        android:id="@+id/radiogroup1"
+        android:id="@+id/SexRadioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checkedButton="@+id/radio1"
@@ -80,7 +79,7 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radiogroup1" />
+        app:layout_constraintTop_toBottomOf="@+id/SexRadioGroup" />
 
     <EditText
         android:id="@+id/RHeight"
